# Testcrypt

./: CMakeLists.txt  Cryption.cpp  Cryption.hpp  README.md  testAES.cpp
cpu/: AEScpu.cpp  AEScpu.hpp
gpu/: AESCudaAdapter.cu  AESCudaAdapter.h  AES_final.cu  AES_final.h
